--- a/days/w2d3/gpt2.ipynb
+++ b/days/w2d3/gpt2.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
     "        \n",
     "    \n",
     "    def forward(self, x):\n",
-    "        pre_seq_len = x.shape[-2]\n",
+    "        pre_seq_len = x.shape[1]\n",
     "\n",
     "        if self.cache.shape[-2] != 0:\n",
     "            x = x[:,-1:]\n",
@@ -715,13 +715,13 @@
     "        else:\n",
     "            pos_embedding = self.pos_embedding[:pre_seq_len]\n",
     "\n",
-    "        seq_len = x.shape[-2]\n",
+    "        seq_len = x.shape[1]\n",
     "        \n",
     "        encoding = self.token_embedding[x] + pos_embedding\n",
     "        encoding = self.dropout(encoding)\n",
     "\n",
     "        if self.use_cache:\n",
-    "            if self.cache.size() == 0:\n",
+    "            if self.cache.shape[-2] == 0:\n",
     "                new_cache = t.zeros(self.num_layers, self.num_heads, seq_len, 2*self.hidden_size//self.num_heads)\n",
     "                for i,block in enumerate(self.blocks):\n",
     "                    encoding, new_cache[i] = block(encoding, past_key_values=None, return_key_values=True)\n",
@@ -755,27 +755,46 @@
     "        self.clear_cache()\n",
     "        while len(ids) < max_length:\n",
     "            new_token = self.next_token(ids, temperature, freq_penalty)\n",
-    "            ids.append(new_token[0])\n",
+    "            ids.append(new_token)\n",
     "        print(self.tokenizer.decode(ids))\n",
     "        return ids\n",
-    "        \n",
-    "\n"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Congrats! Your GPT returns the same results with and without cache.\n",
+      "It took 2.351s to generate a 500-token sentence without cache and 0.756s with cache.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gpt_tests.test_gpt_block(GPT2Block)\n",
+    "# gpt_tests.test_gpt(FastGPT2)\n",
+    "gpt_tests.test_gpt_cache(FastGPT2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_gpt = FastGPT2(num_layers=12, num_heads=12, vocab_size=50257, hidden_size=768,\n",
-    "                 max_position_embeddings=1024, dropout=0.1, layer_norm_epsilon=1e-5, use_cache=False)\n",
+    "                 max_position_embeddings=1024, dropout=0.1, layer_norm_epsilon=1e-5, use_cache=True)\n",
     "# pretrained_gpt = gpt_tests.get_pretrained_gpt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +821,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,20 +832,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After a long day’s work, I like to end\n",
-      "A); when part to police Emperor riding dance the spilled Report H to. he\n"
+      "My favorite emoticon is: Michael Jackson ANT\n",
+      "\n",
+      "I like the NFL as a whole since it's hipsters vs. men, but @\n"
      ]
     }
    ],
    "source": [
-    "my_gpt.generate('After a long day’s work, I like to', freq_penalty=0);"
+    "my_gpt.eval()\n",
+    "my_gpt.generate('My favorite emoticon is:', freq_penalty=2);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__"
    ]
   },
   {
