Fixed GPT-2 cache

--- a/days/w2d3/gpt_fast_generate.ipynb
+++ b/days/w2d3/gpt_fast_generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,12 @@
     "            # Multiply by V\n",
     "            out = einsum('b n k q, b n k h -> b n q h', attention_pattern, V)\n",
     "            out = rearrange(out, 'batch num_heads seq_len head_size -> batch seq_len (num_heads head_size)')\n",
-    "            out = self.outputLL(out) \n",
-    "            return out\n",
+    "            out = self.outputLL(out)\n",
+    "            if return_key_values:\n",
+    "                assert x.shape[0] == 1\n",
+    "                return out, torch.cat((K,V), dim = 3) \n",
+    "            else:\n",
+    "                return out\n",
     "        else:\n",
     "            assert x.shape == (1,1,self.hidden_size)\n",
     "            kqv = self.attentionLL(x)\n",
@@ -97,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,17 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking final encodings:\n",
-      "Congrats! You've passed the test!\n",
-      "Checking logits:\n",
-      "Congrats! You've passed the test!\n"
+      "Congrats! Your GPT returns the same results with and without cache.\n",
+      "It took 213.333s to generate a 500-token sentence without cache and 38.479s with cache.\n"
      ]
     }
    ],
