--- a/days/base_notebook.ipynb
+++ b/days/base_notebook.ipynb
@@ -12,7 +12,7 @@
     "from einops import rearrange, reduce, repeat\n",
     "import numpy as np\n",
     "import mlab_tests\n",
-    "from utils import * # MLAB-specific utils library. Contains useful functions like itpeek(tensor)\n",
+    "from days.utils import * # MLAB-specific utils library. Contains useful functions like itpeek(tensor)\n",
     "from typing import *"
    ]
   },
