--- a/days/train_bert.ipynb
+++ b/days/train_bert.ipynb
@@ -20,7 +20,7 @@
     "from einops import rearrange\n",
     "import days.bert as bert\n",
     "from days.bert import Bert, my_bert_from_hf_weights\n",
-    "from utils import tpeek\n",
+    "from days.utils import tpeek\n",
     "import transformers\n",
     "import torchtext\n",
     "from datetime import datetime\n",
