--- a/days/w2d5/w2d5_sol.ipynb
+++ b/days/w2d5/w2d5_sol.ipynb
@@ -120,7 +120,7 @@
     "from einops import reduce, rearrange, repeat\n",
     "import torch as t\n",
     "import days.gpt2 as gpt2\n",
-    "from utils import *\n",
+    "from days.utils import *\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n"
    ]
