--- a/style_guide.ipynb
+++ b/style_guide.ipynb
@@ -23,7 +23,7 @@
     "import torch as t\n",
     "import numpy as np\n",
     "#import days.training_tests as td\n",
-    "from utils import tpeek"
+    "from days.utils import tpeek"
    ]
   },
   {
