tokenizer: fix handling unknown symbols

--- a/days/w2d4/tokenizer.ipynb
+++ b/days/w2d4/tokenizer.ipynb
@@ -41,15 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[882, 242, 80, 132, 343, 145, 113, 888, 2, 168, 76, 811, 113, 113, 106, 118, 12, 252, 12, 146, 811, 74, 908, 526, 58, 162, 39, 237, 53, 59, 1018, 573, 276, 78, 59, 422, 116, 180, 40, 86, 387, 6, 49]\n",
-      "hello, my name is Macbeth. This is a sentence. The quick brown fox jumps over the lazy dog.\n"
+      "[56, 48, 526, 85, 82, 18, 14, 88, 60, 162, 110, 99, 320, 82, 133, 236, 468, 476, 331, 254, 383, 80, 39, 93, 188, 347, 78, 389, 666, 462, 58, 185, 148, 77, 108, 82, None, 49]\n",
+      "Buck and Tao drove around in their firetruck, which was painted bright red <UNK>.\n"
      ]
     }
    ],
@@ -71,10 +71,10 @@
     "                    stack.append(combined_token)\n",
     "                else:\n",
     "                    stack.append(curr_token)\n",
-    "        return [self.vocab[token] for token in stack]\n",
+    "        return [self.vocab.get(token, None) for token in stack]\n",
     "    \n",
     "    def decode(self, ids):\n",
-    "        return ''.join(self.vocab_by_id[i] for i in ids)\n",
+    "        return ''.join(self.vocab_by_id.get(i, \"<UNK>\") for i in ids)\n",
     "                \n",
     "    @classmethod\n",
     "    def from_corpus(cls, corpus, merges=1000):\n",
@@ -98,7 +98,7 @@
     "                    stack.append(i)\n",
     "            return stack\n",
     "\n",
-    "        for _ in range(merges):\n",
+    "        for t in range(merges):\n",
     "            c = Counter()\n",
     "            for i in corpus:\n",
     "                # generate pairs of adjacent tokens\n",
@@ -118,7 +118,7 @@
     "corpus = open(Path.home() / \"mlab/days/w2d4/shakespeare.txt\").readlines()\n",
     "minicorpus = corpus[5000:6000]\n",
     "tokenizer = BPETokenizer.from_corpus(minicorpus)\n",
-    "sentence = \"hello, my name is Macbeth. This is a sentence. The quick brown fox jumps over the lazy dog.\"\n",
+    "sentence = \"Buck and Tao drove around in their firetruck, which was painted bright red 🔥.\"\n",
     "tokens = tokenizer.tokenize(sentence)\n",
     "print(tokens)\n",
     "decoded = tokenizer.decode(tokens)\n",
