BPETokenizer that works

--- a/days/w2d4/w2d4_bm.ipynb
+++ b/days/w2d4/w2d4_bm.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
     "from typing import List\n",
     "import re\n",
-    "import tokenizer"
+    "import tokenizer\n",
+    "import numpy as np"
    ]
   },
   {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,8 @@
      "output_type": "stream",
      "text": [
       "('ef', 3)\n",
-      "[('ab', 1), ('abc', 0), ('ad', 2)]\n"
+      "[('ab', 1), ('abc', 0), ('ad', 2)]\n",
+      "1\n"
      ]
     }
    ],
@@ -127,8 +129,20 @@
     "        for (c, child) in self.children.items():\n",
     "            for token, token_id in child.all_tokens():\n",
     "                yield (c + token, token_id)\n",
+    "                \n",
+    "    def find(self, text):\n",
+    "        cursor = self\n",
+    "        for c in text:\n",
+    "            try:\n",
+    "                cursor = cursor.children[c]\n",
+    "            except KeyError:\n",
+    "                raise KeyError(text)\n",
+    "        if cursor.token_id is None:\n",
+    "            raise KeyError(text)\n",
+    "        else:\n",
+    "            return cursor.token_id\n",
     "    \n",
-    "    def find_longest(self, text, start_pos=0):\n",
+    "    def find_longest_prefix(self, text, start_pos=0):\n",
     "        token_found = None\n",
     "        token_id = self.token_id\n",
     "        cursor = self\n",
@@ -146,10 +160,11 @@
     "trie = Trie()\n",
     "for token_id, token in enumerate(['abc', 'ab', 'ad', 'ef']):\n",
     "    trie.add_token(token=token, token_id=token_id)\n",
-    "print(trie.find_longest('abcdefg', start_pos=4))\n",
+    "print(trie.find_longest_prefix('abcdefg', start_pos=4))\n",
     "trie.remove_token('ef')\n",
     "trie.invariant()\n",
-    "print(list(trie.all_tokens()))"
+    "print(list(trie.all_tokens()))\n",
+    "print(trie.find('ab'))"
    ]
   },
   {
@@ -163,35 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([42, 296, 11, 464, 807, 80, 168, 83, 125, 83, 31, 504, 725, 118, 134],\n",
-       " {'id': 894, 'piece': 'hel'},\n",
-       " [('hel', 894),\n",
-       "  ('lo', 242),\n",
-       "  (', my ', 464),\n",
-       "  ('nam', 807),\n",
-       "  ('e ', 80),\n",
-       "  ('is ', 119),\n",
-       "  ('to', 503),\n",
-       "  ('m', 49),\n",
-       "  (' tru', 471),\n",
-       "  ('n', 30),\n",
-       "  ('d', 71),\n",
-       "  ('le', 725),\n",
-       "  ('wi', 118),\n",
-       "  ('ch', 134)])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BPETokenizer(Tokenizer):\n",
     "    def __init__(self, tokens):\n",
@@ -201,9 +190,9 @@
     "            token_id = token['id']\n",
     "            piece = token['piece']\n",
     "            self.token_trie.add_token(token=piece, token_id=token_id)\n",
-    "            self.tokens_by_id[token_id] = token\n",
+    "            self.tokens_by_id[token_id] = piece\n",
     "            \n",
-    "    def tokenize(self, text):\n",
+    "    def trie_tokenize(self, text):\n",
     "        i = 0\n",
     "        tokens = []\n",
     "        while i < len(text):\n",
@@ -212,13 +201,135 @@
     "            i += len(token)\n",
     "        return tokens\n",
     "    \n",
-    "mine = BPETokenizer(reference.token_list)\n",
-    "(\n",
-    "    reference.tokenize(\"hello, my name is tom trundlewich\"),\n",
-    "    mine.tokens_by_id[894],\n",
-    "    mine.tokenize(\"hello, my name is tom trundlewich\"),\n",
-    ")"
+    "    def tokenize_involving_list_deletion(self, text):\n",
+    "        tokens = [c for c in text]\n",
+    "        for token in self.tokens_by_id.values():\n",
+    "            i = 0\n",
+    "            new_tokens = []\n",
+    "            while i < len(tokens):\n",
+    "                while i + 1 < len(tokens) and tokens[i] + tokens[i + 1] == token:\n",
+    "                    tokens[i] = token\n",
+    "                    del tokens[i + 1]\n",
+    "                i += 1\n",
+    "        return [self.token_trie.find(token) for token in tokens]\n",
+    "    \n",
+    "    def tokenize(self, text):\n",
+    "        tokens = [c for c in text]\n",
+    "        for token in self.tokens_by_id.values():\n",
+    "            i = 0\n",
+    "            new_tokens = []\n",
+    "            while i < len(tokens):\n",
+    "                if i + 1 < len(tokens) and tokens[i] + tokens[i + 1] == token:\n",
+    "                    new_tokens.append(token)\n",
+    "                    i += 2\n",
+    "                else:\n",
+    "                    new_tokens.append(tokens[i])\n",
+    "                    i += 1\n",
+    "            tokens = new_tokens\n",
+    "        return [self.token_trie.find(token) for token in tokens]\n",
+    "\n",
+    "tokenizer.test_bpe_tokenizer(BPETokenizer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BPEtokenizerAlex:\n",
+    "    def __init__(self, tokens):\n",
+    "        self.tokens_by_id = {}\n",
+    "        self.ids_by_token = {}\n",
+    "        for token in tokens:\n",
+    "            self.tokens_by_id[token['id']]=token['piece']\n",
+    "            self.ids_by_token[token['piece']]=token['id']\n",
+    "            \n",
+    "    \n",
+    "    def tokenize(self, string):\n",
+    "        char_ids = np.array([self.ids_by_token[char] for char in string])\n",
+    "        next_token = np.arange(1,len(char_ids)+1)\n",
+    "        live = np.ones(len(char_ids))\n",
+    "        token_locations= {}        \n",
+    "        for ids in range(len(self.tokens_by_id.keys())):\n",
+    "            token = self.tokens_by_id[ids]\n",
+    "            if len(token) == 1:\n",
+    "                \n",
+    "                token_locations[ids]=[]\n",
+    "                for i in range(0,len(char_ids)):\n",
+    "                    if char_ids[i]==token:\n",
+    "                        token_locations[ids].append(i)          \n",
+    "                break\n",
+    "            token_locations[ids]=[]\n",
+    "            for i in range(1,len(token)):\n",
+    "                stoken1=token[:i]\n",
+    "                stoken2=token[i:]\n",
+    "                if stoken1 not in self.ids_by_token.keys():\n",
+    "                    continue\n",
+    "                if stoken2 not in self.ids_by_token.keys():\n",
+    "                    continue\n",
+    "                sid1=self.ids_by_token[stoken1]\n",
+    "                sid2=self.ids_by_token[stoken2]\n",
+    "                new_sid_token_loc=[]\n",
+    "                for token_loc in token_locations[sid1]:\n",
+    "                    if char_ids[next_token[token_loc]]==sid2 and live[token_loc]==1 and live[next_token[token_loc]]==1:\n",
+    "                        char_ids[token_loc]=char_ids\n",
+    "                        token_locations[ids].append(token_loc)\n",
+    "                        live[next_token[token_loc]]=0\n",
+    "                        next_token[token_loc]=next_token[next_token[token_loc]]\n",
+    "                    else:\n",
+    "                        new_sid_token_loc.append(token_loc)\n",
+    "                token_locations[sid1]=new_sid_token_loc\n",
+    "            new_tokens=[char_ids[0]]\n",
+    "            ptr = 0 \n",
+    "            while ptr != len(char_ids):\n",
+    "                ptr=next_token[ptr]\n",
+    "                new_token.append(char_ids[ptr])\n",
+    "        return new_tokens\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Atokenizer = BPEtokenizerAlex(reference.token_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-3aa7bbe60f94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the cat sat\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-70-aed3e48385c6>\u001b[0m in \u001b[0;36mtokenize\u001b[0;34m(self, string)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mtoken_locations\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mids\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokens_by_id\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0mtoken\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokens_by_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mids\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "Atokenizer.tokenize(\"the cat sat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
