BPETokenizer.from_corpus

--- a/days/w2d4/w2d4_bm.ipynb
+++ b/days/w2d4/w2d4_bm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,15 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BPETokenizer(Tokenizer):\n",
-    "    def __init__(self, tokens):\n",
+    "    def __init__(self, token_list):\n",
+    "        self.token_list = token_list\n",
     "        self.token_trie = Trie()\n",
     "        self.tokens_by_id = {}\n",
-    "        for token in tokens:\n",
+    "        for token in token_list:\n",
     "            token_id = token['id']\n",
     "            piece = token['piece']\n",
     "            self.token_trie.add_token(token=piece, token_id=token_id)\n",
@@ -205,7 +206,6 @@
     "        tokens = [c for c in text]\n",
     "        for token in self.tokens_by_id.values():\n",
     "            i = 0\n",
-    "            new_tokens = []\n",
     "            while i < len(tokens):\n",
     "                while i + 1 < len(tokens) and tokens[i] + tokens[i + 1] == token:\n",
     "                    tokens[i] = token\n",
@@ -227,13 +227,50 @@
     "                    i += 1\n",
     "            tokens = new_tokens\n",
     "        return [self.token_trie.find(token) for token in tokens]\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_corpus(cls, corpus: List[str], max_vocab_size=1000):\n",
+    "        tokens = [[c for c in text] for text in corpus]\n",
+    "        ids_by_token = {}\n",
+    "        tokens_by_id = {}\n",
+    "        fresh_id = 5\n",
+    "        for text in corpus:\n",
+    "            for c in text:\n",
+    "                if c not in ids_by_token:\n",
+    "                    ids_by_token[c] = fresh_id\n",
+    "                    tokens_by_id[fresh_id] = c\n",
+    "                    fresh_id += 1\n",
+    "        pair_counter = Counter()\n",
+    "        while fresh_id < max_vocab_size and any(len(text) > 1 for text in tokens):\n",
+    "            for text in tokens:\n",
+    "                for i in range(len(text) - 1):\n",
+    "                    pair_counter[(text[i], text[i + 1])] += 1\n",
+    "            ((next_pair, next_count),) = pair_counter.most_common(1)\n",
+    "            next_token = ''.join(next_pair)\n",
+    "            ids_by_token[next_token] = fresh_id\n",
+    "            tokens_by_id[fresh_id] = next_token\n",
+    "            fresh_id += 1\n",
+    "            for i in range(len(tokens)):\n",
+    "                text = tokens[i]\n",
+    "                text_with_new_token = []\n",
+    "                j = 0\n",
+    "                while j < len(text):\n",
+    "                    if j + 1 < len(text) and text[j] + text[j + 1] == next_token:\n",
+    "                        text_with_new_token.append(next_token)\n",
+    "                        j += 2\n",
+    "                    else:\n",
+    "                        text_with_new_token.append(text[j])\n",
+    "                        j += 1\n",
+    "                tokens[i] = text_with_new_token\n",
+    "        return cls([{'id': token_id, 'piece': token} for token, token_id in ids_by_token.items()])\n",
     "\n",
-    "tokenizer.test_bpe_tokenizer(BPETokenizer)"
+    "# tokenizer.test_bpe_tokenizer(BPETokenizer)\n",
+    "# tokenizer.test_tokenizer_from_corpus(BPETokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,23 +281,26 @@
     "        for token in tokens:\n",
     "            self.tokens_by_id[token['id']]=token['piece']\n",
     "            self.ids_by_token[token['piece']]=token['id']\n",
-    "            \n",
     "    \n",
     "    def tokenize(self, string):\n",
     "        char_ids = np.array([self.ids_by_token[char] for char in string])\n",
     "        next_token = np.arange(1,len(char_ids)+1)\n",
     "        live = np.ones(len(char_ids))\n",
-    "        token_locations= {}        \n",
-    "        for ids in range(len(self.tokens_by_id.keys())):\n",
+    "        token_locations= {}\n",
+    "        #print(sorted(self.tokens_by_id.keys(),key = lambda x: len(str(self.tokens_by_id[x]))))\n",
+    "        for ids in sorted(self.tokens_by_id.keys(),key = lambda x: len(str(self.tokens_by_id[x]))):\n",
     "            token = self.tokens_by_id[ids]\n",
-    "            if len(token) == 1:\n",
-    "                \n",
+    "            if len(str(token)) == 1:\n",
+    "                #print(token)\n",
     "                token_locations[ids]=[]\n",
     "                for i in range(0,len(char_ids)):\n",
-    "                    if char_ids[i]==token:\n",
-    "                        token_locations[ids].append(i)          \n",
-    "                break\n",
+    "                    if char_ids[i]==ids:\n",
+    "                        token_locations[ids].append(i)    \n",
+    "                #print(token_locations[ids])\n",
+    "                continue\n",
     "            token_locations[ids]=[]\n",
+    "            insert_pts = []\n",
+    "            new_sid_token_loc = {}\n",
     "            for i in range(1,len(token)):\n",
     "                stoken1=token[:i]\n",
     "                stoken2=token[i:]\n",
@@ -270,21 +310,32 @@
     "                    continue\n",
     "                sid1=self.ids_by_token[stoken1]\n",
     "                sid2=self.ids_by_token[stoken2]\n",
-    "                new_sid_token_loc=[]\n",
+    "                \n",
+    "                new_sid_token_loc[sid1]=[]\n",
+    "                #print(token_locations.keys())\n",
+    "                #print(sid1)\n",
+    "                #print(token_locations[sid1])\n",
+    "                #print(self.tokens_by_id[sid1])\n",
+    "                #print(self.tokens_by_id[ids])\n",
     "                for token_loc in token_locations[sid1]:\n",
-    "                    if char_ids[next_token[token_loc]]==sid2 and live[token_loc]==1 and live[next_token[token_loc]]==1:\n",
-    "                        char_ids[token_loc]=char_ids\n",
+    "                    insert_pts.append([(token_loc,sid1)])\n",
+    "            insert_pts = sorted(insert_pts)\n",
+    "            for (token_loc,\n",
+    "                    \n",
+    "            if next_token[token_loc]!= len(char_ids) and char_ids[next_token[token_loc]]==sid2 and live[token_loc]==1 and live[next_token[token_loc]]==1:\n",
+    "                        char_ids[token_loc]=ids\n",
     "                        token_locations[ids].append(token_loc)\n",
     "                        live[next_token[token_loc]]=0\n",
     "                        next_token[token_loc]=next_token[next_token[token_loc]]\n",
     "                    else:\n",
     "                        new_sid_token_loc.append(token_loc)\n",
     "                token_locations[sid1]=new_sid_token_loc\n",
-    "            new_tokens=[char_ids[0]]\n",
-    "            ptr = 0 \n",
-    "            while ptr != len(char_ids):\n",
-    "                ptr=next_token[ptr]\n",
-    "                new_token.append(char_ids[ptr])\n",
+    "        new_tokens=[]\n",
+    "        ptr = 0 \n",
+    "        while ptr != len(char_ids):\n",
+    "            new_tokens.append(char_ids[ptr])\n",
+    "            ptr=next_token[ptr]\n",
+    "            \n",
     "        return new_tokens\n",
     "                \n",
     "                \n",
@@ -295,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,24 +355,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "0",
+     "ename": "AssertionError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-72-3aa7bbe60f94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the cat sat\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-70-aed3e48385c6>\u001b[0m in \u001b[0;36mtokenize\u001b[0;34m(self, string)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mtoken_locations\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mids\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokens_by_id\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0mtoken\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokens_by_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mids\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-215-25cb8cb2b137>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_bpe_tokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBPEtokenizerAlex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/mlab/days/w2d4/tokenizer.py\u001b[0m in \u001b[0;36mtest_bpe_tokenizer\u001b[0;34m(tokenizer)\u001b[0m\n\u001b[1;32m    278\u001b[0m     \u001b[0mreference\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBPETokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_corpus\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminicorpus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0myours\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreference\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoken_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 280\u001b[0;31m     assert tuple(reference.tokenize(\"hello, my name is tom trundlewich\")) == tuple(\n\u001b[0m\u001b[1;32m    281\u001b[0m         \u001b[0myours\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello, my name is tom trundlewich\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m     )\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "Atokenizer.tokenize(\"the cat sat\")"
+    "tokenizer.test_bpe_tokenizer(BPEtokenizerAlex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[42, 296, 11, 464, 807, 80, 168, 83, 125, 83, 31, 504, 725, 118, 134]"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reference.tokenize(\"hello, my name is tom trundlewich\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[671, 96, 11, 464, 807, 80, 168, 83, 125, 83, 31, 504, 725, 118, 134]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Atokenizer.tokenize(\"hello, my name is tom trundlewich\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Atokenizer.tokens_by_id[42]"
    ]
   },
   {
