--- a/days/w2d1/bert.ipynb
+++ b/days/w2d1/bert.ipynb
@@ -626,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import torchtext\n",
